fix bg z-index

--- a/public_html/static/css/scss/website/_base.scss
+++ b/public_html/static/css/scss/website/_base.scss
@@ -5,6 +5,7 @@ html{
 html:before{
 	content: "";
 	position: fixed;
+	z-index: -1;
 	top: 0;
 	bottom: 0;
 	right: 0;
