--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -4617,6 +4617,7 @@ html {
 html:before {
   content: "";
   position: fixed;
+  z-index: -1;
   top: 0;
   bottom: 0;
   right: 0;
